# modelledger

./: .gitignore  AGENTS.md  README.md  demo_app.py  pyproject.toml
.streamlit/: config.toml
demo_repository/: .env.example  app.py  config.json
modelledger/: __init__.py  cli.py  registry.py  risk.py  scanner.py
modelledger/data/: models.yaml
tests/: conftest.py  test_cli.py  test_packaging.py  test_registry.py  test_risk.py  test_scanner.py
